Project 2 - week6 completed
