# routes/index.js
@@ -3,6 +3,6 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/user', require('./user'));
-router.use('/theme', require('./theme'));
+router.use('/specialty', require('./specialty'));
 
 module.exports = router;
