# routes/specialty.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+
+const specialtyController = require('../controllers/specialty');
+
+router.get('/:specialty', specialtyController.getSpecialty);
+
+module.exports = router;
