# routes/theme.js
@@ -1,8 +1,0 @@
-const express = require('express');
-const router = express.Router();
-
-const themeController = require('../controllers/theme');
-
-router.get('/:themeName', themeController.getTheme);
-
-module.exports = router;
