# routes/user.js
@@ -9,4 +9,8 @@ router.get('/:username', userController.getUser);
 
 router.post('/', userController.create);
 
+router.put('/:username', userController.updateUser);
+
+router.delete('/:username', userController.deleteUser);
+
 module.exports = router;
